# scrfd

./: .gitignore  CHANGELOG.md  Cargo.toml
src/: builder.rs  lib.rs  scrfd.rs  scrfd_async.rs
src/helpers/: opencv_helper.rs  relative_conversion.rs  scrfd_helper.rs
