[package]
name = "rusty_scrfd"
version = "1.2.0"
authors = ["Prabhat Ranjan <prabhat0206@hotmail.com>"]
edition = "2021"
description = "A high-performance face detection library using SCRFD model with OpenCV integration"
keywords = ["face-detection", "computer-vision", "machine-learning", "onnx", "opencv"]
categories = ["computer-vision", "multimedia::images", "science"]
license = "MIT"
repository = "https://github.com/prabhat0206/scrfd"
documentation = "https://docs.rs/rusty_scrfd"
readme = "readme.md"
exclude = [
    "models/*",
    "sample_input/*",
    "sample_output/*",
    ".github/*",
]

[features]
default = []
async = ["tokio"]

# ONNX Runtime Execution Providers
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
openvino = ["ort/openvino"]
tensorrt = ["ort/tensorrt"]
rocm = ["ort/rocm"]
onednn = ["ort/onednn"]
nnapi = ["ort/nnapi"]
xnnpack = ["ort/xnnpack"]
cann = ["ort/cann"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
migraphx = ["ort/migraphx"]
qnn = ["ort/qnn"]
rknpu = ["ort/rknpu"]
tvm = ["ort/tvm"]
vitis = ["ort/vitis"]

# ORT utilities
load-dynamic = ["ort/load-dynamic"]

[dependencies]
ort = { version = "2.0.0-rc.11", features = [ "ndarray" ] }
opencv-binding-generator = "0.100.0"
opencv = "0.98.1"
ndarray = "0.17.2"
uuid = "1.20.0"
anyhow = "1.0.101"
ndarray-stats = "0.7.0"
tokio = { version = "1.0", features = ["full"], optional = true }
log = "0.4"
